--- a/index1.html
+++ b/index1.html
@@ -107,33 +107,33 @@
              data-menu-items-align="right" data-menu="yes">
             <div class="t456__maincontainer " style="">
                 <div class="t456__leftwrapper" style="min-width:90px;width:90px;">
-                    <div class="t456__logowrapper"><a href="https://google.com">
+                    <div class="t456__logowrapper"><a href="index.html">
                         <div class="t456__logo t-title" field="title"
-                        "><strong>Rüya Dünyası</strong></div>
+                        ><strong>Rüya Dünyası</strong></div>
                     </a> </div>
-            </div>
-            <nav class="t456__rightwrapper t456__menualign_right" style="">
-                <ul role="list" class="t456__list t-menu__list">
-                    <li class="t456__list_item" style="padding:0 15px 0 0;"><a class="t-menu__link-item" href=""
+                </div>
+                <nav class="t456__rightwrapper t456__menualign_right" style="">
+                    <ul role="list" class="t456__list t-menu__list">
+                        <li class="t456__list_item" style="padding:0 15px 0 0;"><a class="t-menu__link-item" href="index.html"
+                                                                                   data-menu-submenu-hook=""
+                                                                                   data-menu-item-number="1">Ana Sayfa</a>
+                        </li>
+                        <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href="#about"
                                                                                data-menu-submenu-hook=""
-                                                                               data-menu-item-number="1">Ana Sayfa</a>
-                    </li>
-                    <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href=""
-                                                                           data-menu-submenu-hook=""
-                                                                           data-menu-item-number="2">Rüya Dünyası
-                        Hakkında</a></li>
-                    <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href=""
-                                                                           data-menu-submenu-hook=""
-                                                                           data-menu-item-number="3">Gizlilik
-                        Politikası</a></li>
-                    <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href=""
-                                                                           data-menu-submenu-hook=""
-                                                                           data-menu-item-number="4">Şartlar ve
-                        koşullar</a></li>
-                    <li class="t456__list_item" style="padding:0 0 0 15px;"><a class="t-menu__link-item" href=""
+                                                                               data-menu-item-number="2">Rüya Dünyası
+                            Hakkında</a></li>
+                        <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href="policy.html"
                                                                                data-menu-submenu-hook=""
-                                                                               data-menu-item-number="5">İletişim</a>
-                    </li>
+                                                                               data-menu-item-number="3">Gizlilik
+                            Politikası</a></li>
+                        <li class="t456__list_item" style="padding:0 15px;"><a class="t-menu__link-item" href="terms.html"
+                                                                               data-menu-submenu-hook=""
+                                                                               data-menu-item-number="4">Şartlar ve
+                            koşullar</a></li>
+                        <li class="t456__list_item" style="padding:0 0 0 15px;"><a class="t-menu__link-item" href="#contact"
+                                                                                   data-menu-submenu-hook=""
+                                                                                   data-menu-item-number="5">İletişim</a>
+                        </li>
                 </ul>
             </nav>
         </div>
@@ -202,7 +202,7 @@
                             </div>
                         </div>
                         <div class="t677__btn-container">
-                            <div class="t677__btn-wrapper"><a href="#vet" target="" class="t-btn t-btn_md "
+                            <div class="t677__btn-wrapper"><a href="#contact" target="" class="t-btn t-btn_md "
                                                               style="color:#ffffff;background-color:#ff6f61;border-radius:50px; -moz-border-radius:50px; -webkit-border-radius:50px;"
                                                               data-buttonfieldset="button">
                                 <table role="presentation" style="width:100%; height:100%;">
@@ -265,7 +265,7 @@
         <div class="t-container_100">
             <div class="t142__wrapone">
                 <div class="t142__wraptwo"><a class="t-btn t142__submit t-btn_md"
-                                              href="http://" target="" style="color:#000000;"
+                                              href="#contact" target="" style="color:#000000;"
                                               data-buttonfieldset="button"> <span class="t142__text"></span> </a></div>
             </div>
         </div>
@@ -441,7 +441,7 @@
                     <div class="t165__text t-text t-text_sm" field="text"><span style="color: rgb(255, 255, 255);">Rüya Dünyası'nda kontrol sizde! Rüyalarınızı kontrol etmek, bilinçaltınızdaki potansiyeli açığa çıkarmak için harika bir yol. Pin-up karakterlerinizi kullanarak bilinçaltınızdaki güçleri keşfedin. Rüyalarınızı istediğiniz gibi şekillendirin ve sınırlarını zorlayın.</span>
                     </div>
                     <div class="t165__btn-container">
-                        <div class="t165__btn-wrapper"><a href="" target="" class="t-btn t-btn_md "
+                        <div class="t165__btn-wrapper"><a href="#contact" target="" class="t-btn t-btn_md "
                                                           style="color:#ffffff;background-color:#ff6f61;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;"
                                                           data-buttonfieldset="button">
                             <table role="presentation" style="width:100%; height:100%;">
@@ -482,7 +482,7 @@
         <div class="t-container_100">
             <div class="t142__wrapone">
                 <div class="t142__wraptwo"><a class="t-btn t142__submit t-btn_md"
-                                              href="http://" target=""
+                                              href="#contact" target=""
                                               style="color:#ffffff;background-color:#ff6f61;border-radius:30px; -moz-border-radius:30px; -webkit-border-radius:30px;"
                                               data-buttonfieldset="button"> <span class="t142__text">Düzenlemek</span>
                 </a></div>
